--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "moment": "^2.30.1",
     "objects-to-csv": "^1.3.6",
     "path": "^0.12.7",
     "puppeteer": "3.0.0"
